--- a/index.html
+++ b/index.html
@@ -7,6 +7,90 @@
     <meta name="keywords" content="שחמט,שחור,לבן" />
   </head>
   <body>
+    <div id="fullboard" class="fullBoard">
+      <div id="board0" class="board">
+        <div id="00" class="cube"></div>
+        <div id="01" class="cube"></div>
+        <div id="02" class="cube"></div>
+        <div id="03" class="cube"></div>
+        <div id="04" class="cube"></div>
+        <div id="05" class="cube"></div>
+        <div id="06" class="cube"></div>
+        <div id="07" class="cube"></div>
+      </div>
+      <div id="board1" class="board">
+        <div id="10" class="cube"></div>
+        <div id="11" class="cube"></div>
+        <div id="12" class="cube"></div>
+        <div id="13" class="cube"></div>
+        <div id="14" class="cube"></div>
+        <div id="15" class="cube"></div>
+        <div id="16" class="cube"></div>
+        <div id="17" class="cube"></div>
+      </div>
+      <div id="board2" class="board">
+        <div id="20" class="cube"></div>
+        <div id="21" class="cube"></div>
+        <div id="22" class="cube"></div>
+        <div id="23" class="cube"></div>
+        <div id="24" class="cube"></div>
+        <div id="25" class="cube"></div>
+        <div id="26" class="cube"></div>
+        <div id="27" class="cube"></div>
+      </div>
+      <div id="board3" class="board">
+        <div id="30" class="cube"></div>
+        <div id="31" class="cube"></div>
+        <div id="32" class="cube"></div>
+        <div id="33" class="cube"></div>
+        <div id="34" class="cube"></div>
+        <div id="35" class="cube"></div>
+        <div id="36" class="cube"></div>
+        <div id="37" class="cube"></div>
+      </div>
+      <div id="board4" class="board">
+        <div id="40" class="cube"></div>
+        <div id="41" class="cube"></div>
+        <div id="42" class="cube"></div>
+        <div id="43" class="cube"></div>
+        <div id="44" class="cube"></div>
+        <div id="45" class="cube"></div>
+        <div id="46" class="cube"></div>
+        <div id="47" class="cube"></div>
+      </div>
+      <div id="board5" class="board">
+        <div id="50" class="cube"></div>
+        <div id="51" class="cube"></div>
+        <div id="52" class="cube"></div>
+        <div id="53" class="cube"></div>
+        <div id="54" class="cube"></div>
+        <div id="55" class="cube"></div>
+        <div id="56" class="cube"></div>
+        <div id="57" class="cube"></div>
+      </div>
+      <div id="board6" class="board">
+        <div id="60" class="cube"></div>
+        <div id="61" class="cube"></div>
+        <div id="62" class="cube"></div>
+        <div id="63" class="cube"></div>
+        <div id="64" class="cube"></div>
+        <div id="65" class="cube"></div>
+        <div id="66" class="cube"></div>
+        <div id="67" class="cube"></div>
+      </div>
+      <div id="board7" class="board">
+        <div id="70" class="cube"></div>
+        <div id="71" class="cube"></div>
+        <div id="72" class="cube"></div>
+        <div id="73" class="cube"></div>
+        <div id="74" class="cube"></div>
+        <div id="75" class="cube"></div>
+        <div id="76" class="cube"></div>
+        <div id="77" class="cube"></div>
+      </div>
+      </div>  
+    </div>
+    
     <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
